--- a/vkcrb/account/Templates/account/dashboard.html
+++ b/vkcrb/account/Templates/account/dashboard.html
@@ -19,7 +19,8 @@
                 </p>
                 <div class="dashboard__slider-bottom">
                   <div class="dashboard__slider-date">22.04.2021</div>
-                  <a class="dashboard__slider-btn" href="#">Подробнее...</a>
+                  <a data-fancybox data-src="#slider__form1" href="javascript:;"
+                     class="dashboard__slider-btn">Подробнее...</a>
                 </div>
               </div>
             </div>
@@ -40,7 +41,8 @@
                 </p>
                 <div class="dashboard__slider-bottom">
                   <div class="dashboard__slider-date">22.04.2021</div>
-                  <a class="dashboard__slider-btn" href="#">Подробнее...</a>
+                  <a data-fancybox data-src="#slider__form2" href="javascript:;"
+                     class="dashboard__slider-btn">Подробнее...</a>
                 </div>
               </div>
             </div>
@@ -58,7 +60,8 @@
                 </p>
                 <div class="dashboard__slider-bottom">
                   <div class="dashboard__slider-date">22.04.2021</div>
-                  <a class="dashboard__slider-btn" href="#">Подробнее...</a>
+                  <a data-fancybox data-src="#slider__form3" href="javascript:;"
+                     class="dashboard__slider-btn">Подробнее...</a>
                 </div>
               </div>
             </div>
@@ -82,21 +85,149 @@
                 <p class="userboard__list-link userboard__list-title">
                   Меню</p>
                 <div class="userboard__list-content">
-                  <a class="userboard__list-content-link" href="{% url "password_change" %}">Сменить пароль</a>
+                  <a class="userboard__list-content-link" href="{% url 'password_change' %}">Сменить пароль</a>
                   <a class="userboard__list-content-link" href="{% url "edit" %}">Редактировать профиль</a>
                 </div>
               </li>
 
 
             </ul>
-            <a class="userboard__list-link userboard__exit-btn" href="{% url "logout" %}">Выход</a>
-            <a class="politic" href="#">Политика конфиденциальности</a>
+            <a data-fancybox data-src="#exit__popup" href="javascript:;"
+               class="userboard__list-link userboard__exit-btn" href="{% url "logout" %}">Выход</a>
+            <a data-fancybox data-src="#politic__form" href="javascript:;"
+               class="politic">Политика конфиденциальности</a>
             <div class="autor">©2021 Umovist Maxim</div>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+ <div id="politic__form">
+    <p>
+     <h1>Политика конфиденциальности сервиса VKCRB.KZ</h1>
+     <br>
+     <p>1. Общие положения</p>
+     <p>1.1. Предметом регулирования настоящей Политики конфиденциальности (далее – «Политика»)
+     являются отношения между Обществом с ограниченной ответственностью «Максим.Ру»
+     (ОГРН 1027739850962, Казахстан, 125167, г. Бишкуль, ул. Ульянова д.23, стр.79),
+     далее «Максим.ру» или «Компания», которое является правообладателем сайтов, сервисов, программ и/или
+     иных продуктов, в том числе информационного, коммуникационного, рекламного, образовательного,
+      развлекательного и иного характера (далее – «Сервисы», а в отдельности – «Сервис»), расположенных в сети
+     Интернет по адресу https://vkcrb.kz/ (далее – «Сайт»), а также на иных администрируемых vkcrb.kz доменах, и Вами
+      (физическим лицом пользователем сети Интернет), далее  «Пользователь», по поводу обработки информации о Пользователе
+     , включая персональные данные, в процессе использования таким лицом Сервисов vkcrb.kz (далее – «Информация»).
+     </p>
+    </p>
+ </div>
+
+ <div id="slider__form1">
+    <p>
+        Добро пожаловать на главную страницу соц.сети Кызылжаркой РБ . Данный проект разработан
+        в рамках производственной практики 3. Upgrade проекта произошел в рамках производственной
+        практики 4 (преддипломная).
+        <br>
+        Изменения коснулись Front-end части проекта. Был разработан UI\UX дизайн страниц.
+        Все страницы были сверстаны вручную. Получившаяся верстка была натянута на движок разработанный
+        в ходе производственной практики 3.
+    </p>
+ </div>
+
+<div id="slider__form2">
+    <p>
+        <h1>В СКО завели уголовное дело из-за смерти двух пациенток с Covid-19 после их транспортировки</h1>
+        <br>
+        <p>
+            В Петропавловске из-за смерти двух пациенток с коронавирусом после
+            их транспортировки из районной больницы в городскую возбудили уголовное дело,
+            передаёт Sputnik Казахстан.
+            <p>
+            В феврале в Кызылжарской центральной районной больнице закрыли ковидный стационар
+            из-за снижения уровня заболеваемости, больных перевезли в госпитали Петропавловска.
+            Всех пациентов транспортировали в течение суток. После этого умерли две женщины с Covid-19.
+            </p>
+            <p>
+                "Неделю моя мама с двусторонней пневмонией находилась в Кызылжарской больнице,
+                получала всё необходимое лечение. Она уже шла на поправку.
+                И вдруг неожиданно объявили, что инфекционный стационар закрывают.
+                Всех больных, в том числе и тяжёлых пациентов, погрузили в машину и увезли в город.
+                Вы представляете, что в этом состоянии может творить стресс?
+                Мама умерла, не справилась", – рассказал сын одной из погибших Павел Притолюк.
+            <p>
+                Заместитель руководителя управления здравоохранения СКО Кумар Кусемисов тогда сообщал,
+                что обеих пациенток в любом случае из-за тяжести их состояния должны были перевести
+                в областной инфекционный стационар.
+                Затем в облздраве заявили, что провели расследование и установили,
+                что больных перевозили с нарушениями – по шесть человек в неприспособленных
+                автомобилях "УАЗ", не оборудованных кислородными аппаратами, в сопровождении фельдшера.
+                По правилам перевозить пациентов должны были по одному в специализированном
+                реанимобиле с кислородом в сопровождении врача-реаниматолога.
+                Главный врач Кызылжарской центральной районной больницы Александр Кудайбергенов,
+                в свою очередь, полагает, что сделал всё правильно.
+                "Приказ мы получили 1 февраля, а 2 февраля инфекционный стационар должен был быть закрыт.
+                С врачами мы всех пациентов посмотрели, всех, кто подлежал переводу, мы перевели.
+                Что касается двух тяжёлых больных, то для транспортировки вызываются врачи
+                анестезиологи-реаниматологи по санитарной авиации и многопрофильной областной больницы,
+                потому что они работают по их линии. И дежурный, который приехал, оценил состояние пациентов
+                как транспортабельное. Поэтому, я считаю, что все мы сделали правильно", – сказал он.
+                Павел Притолюк добавил, что требовал проверить законность решений должностных лиц
+                управления здравоохранения, инициировавших перевод больных, и компетентность
+                персонала городской больницы, где допустили смерть пациентки,
+                но эту его просьбу проигнорировали.
+            </p>
+            </p>
+        </p>
+    </p>
+ </div>
+
+<div id="slider__form3">
+    <p>
+        <h1>В Казахстане отменили предельные цены на медицинские маски</h1>
+    <br>
+    <p>
+        Министр здравоохранения РК, министр торговли и интеграции РК подписали совместный
+        приказ от 13 апреля 2021 года, а также председатель Агентства по защите и развитию
+        конкуренции РК утвердил постановление «О признании утратившим силу некоторых
+        совместных приказов», передает zakon.kz.
+        В частности, отменены совместные приказы от 15 октября 2020 года, 14 июля 2020 года и
+        6 апреля 2020 года, которые устанавливали предельные розничные цены для одноразовых трехслойных
+        медицинских масок: 60 тенге, 85 тенге и 60 тенге за единицу соответственно.
+        Совместный приказ вводится в действие со 2 мая 2021 года.
+        Напомним, в прошлом году в период пандемии в Казахстане отмечался дефицит медицинских
+        масок и местами происходила спекуляция и утаивание товара. Введение предельных цен на маски
+        было вынужденной мерой до стабилизации ситуации.
+        В октябре прошлого года сообщалось о том, что предельные цены на маски снижены:
+        Межведомственная комиссия определила предельную розничную цену на защитные маски в размере 40 тенге,
+        на одноразовые медицинские маски — 60 тенге. А в ноябре 2020-го министр здравоохранения предупредил,
+        что предельные цены на медицинские маски отменят, так как ситуация с их наличием на рынке
+        стабилизировалась, в регулировании цены больше нет необходимости.
+    </p>
+    </p>
+ </div>
+
+  <div id="change__form">
+    <div class="change__form-wrapper">
+      <h5 class="change-title">Смена пароля</h5>
+      <form method="post">
+          {{ form }}
+          {% csrf_token %}
+        <input class="change-input" type="text" placeholder="Старый пароль*">
+        <input class="change-input" type="text" placeholder="Новый пароль*">
+        <p class="change-info">
+          <span>*</span>Если вы забыли имя пользователя или пароль или не можете получить доступ к аккаунту
+        </p>
+        <input class="change-input" type="text" placeholder="Подтвержение нового пароля*">
+        <button class="support__form-btn" type="submit">Сменить пароль</button>
+      </form>
+    </div>
+  </div>
+      <div id="exit__popup">
+    <h5 class="exit__popup-title">Уходите?</h5>
+    <p class="exit__popup-text">
+      Может всё же передумаете и останетесь?
+    </p>
+    <button class="popup-btn__exit" type="submit"><a href="{% url "logout" %}"> Выйти</a></button>
+  </div>
 {% endblock %}
 </html>
 
