--- a/vkcrb/account/Templates/registration/password_change_done.html
+++ b/vkcrb/account/Templates/registration/password_change_done.html
@@ -3,9 +3,16 @@
 {% block title %}Пароль изменен{% endblock %}
 
 {% block content %}
-     <div class="alert alert-success" role="alert">
-        <h4 class="alert-heading">Пароль изменен</h4>
-        <p class="card-title">Ваш пароль успешно изменен.</p>
-        <p class="card-title">Не забудьте Ваш новый пароль, а лучше запишите его.</p>
-     </div>
+
+    <section class="registration">
+        <div class="container">
+            <div class="registration__wrapper">
+                <div class="registranion__form">
+                    <h4 class="form__btn-politic">Пароль изменен</h4>
+                    <p class="form__btn-politic">Ваш пароль успешно изменен.</p>
+                    <p class="form__btn-politic">Не забудьте Ваш новый пароль, а лучше запишите его.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
