--- a/vkcrb/account/Templates/registration/password_change_form.html
+++ b/vkcrb/account/Templates/registration/password_change_form.html
@@ -1,17 +1,32 @@
 {% extends "base.html" %}
+ {% load static %}
 
-{% load crispy_forms_tags %}
 {% block title %}Сменить пароль{% endblock %}
 
 {% block content %}
-<div  class="card">
+<!--<div  class="card">
     <div  class="card-body">
         <h4  class="card-title"> Смена пароля</h4>
         <form  method="post">
             {% csrf_token %}
-            {{ form|crispy }}
             <button  type="submit"  class="btn btn-success">Сменить пароль </button>
         </form>
     </div>
-</div>
+</div>-->
+
+    <section class="registration">
+        <div class="container">
+            <div class="registration__wrapper">
+                <div class="registranion__form">
+                    <h5 class="registranion__form-title">Смена пароля</h5>
+                    <form method="post">
+                        {{ form }}
+                        {% csrf_token %}
+                        <button class="registration__btn">Сохранить</button>
+                    </form>
+                </div>
+                <img src="{% static 'images/registation.jpg' %}" alt="registation.jpg">
+            </div>
+        </div>
+    </section>
 {% endblock %}
