--- a/vkcrb/account/static/css/style.css
+++ b/vkcrb/account/static/css/style.css
@@ -426,8 +426,19 @@ body{
 #restore__form,
 #exit__popup,
 #politic__form,
+#slider__form1,
+#slider__form2,
+#slider__form3,
 #change__form{
     display: none;
+    background: #516395;
+    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.5);
+    text-align: center;
+    margin: 50px;
+}
+
+#exit__popup2{
+    display: flex;
     background: #516395;
     box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.5);
     text-align: center;
