--- a/vkcrb/account/static/css/style.css
+++ b/vkcrb/account/static/css/style.css
@@ -1,7 +1,7 @@
 html{
     box-sizing: border-box;
 }
- 
+
 *,*::before,*::after{
     box-sizing: inherit;
 }
@@ -33,7 +33,7 @@ body{
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
     line-height: 18px;
-    color: #FFFFFF;    
+    color: #FFFFFF;
 }
 
 .container{
@@ -47,7 +47,7 @@ body{
     margin: 20px 0 20px 0;
     max-width: 100px;
     height: 22px;
-} 
+}
 
 .dashboard__content{
     display: flex;
@@ -101,7 +101,7 @@ body{
     left: 0;
     right: 0;
     text-align: center;
-    
+
 }
 
 .slick-dots li{
@@ -136,7 +136,7 @@ body{
 
 .dashboard__userboard{
     position: relative;
-    
+
 }
 
 .dashboard__userboard-wrapper{
@@ -298,7 +298,7 @@ body{
     display: flex;
     align-items: center;
     min-height: 100vh;
-    
+
 }
 .login__wrapper{
     display: flex;
@@ -330,7 +330,7 @@ body{
     background-color: transparent;
     border-bottom: 1px solid #fff;
     color: #fff;
-    
+
 }
 
 .login__input{
@@ -367,7 +367,7 @@ body{
     font-weight: 500;
     font-size: 13px;
     line-height: 16px;
-    cursor: pointer; 
+    cursor: pointer;
     border: none;
     transition: all .5s;
 }
@@ -469,7 +469,7 @@ body{
 }
 
 .restore__form-input::placeholder{
-    color: rgba(250, 250, 250, 0.5); 
+    color: rgba(250, 250, 250, 0.5);
 }
 
 .restore__form-info,
@@ -495,7 +495,7 @@ body{
     font-weight: 500;
     font-size: 13px;
     line-height: 16px;
-    cursor: pointer; 
+    cursor: pointer;
     border: none;
     transition: all .5s;
     background-color: #202245;
@@ -626,7 +626,7 @@ body{
 
 .registration__wrapper img{
     min-height: 547px;
-    
+
 }
 
 .publication__list-title{
@@ -726,7 +726,7 @@ body{
     border-bottom: 1px solid #323469;
     margin: 50px;
     padding-bottom: 10px;
-    
+
 }
 
 .pagination-list__item a{
@@ -735,3 +735,176 @@ body{
 }
 
 
+.publication__content{
+    background-color: #516395;
+    box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.35);
+    border-radius: 5px;
+}
+
+.publication__title{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+    margin-bottom: 3px;
+}
+
+.publication__container-text{
+    padding: 25px 55px;
+    position: relative;
+}
+
+.publication__text{
+    font-size: 14px;
+    line-height: 21px;
+}
+
+.publication__span{
+    display: flex;
+    margin-bottom: 28px;
+    font-family: 'Lato', sans-serif;
+    font-size: 12px;
+    line-height: 14px;
+    color: #828282;
+}
+
+.publication__subject{
+    padding-left: 28px;
+    position: relative;
+}
+
+.publication__subject::before{
+    content: url('../images/ellipse.svg');
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    top: 0;
+    left: 10px;
+}
+
+.repost__btn{
+    position: absolute;
+    right: -8px;
+    top: 18px;
+    margin-right: 34px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 12px;
+    line-height: 14px;
+    color: #FFFFFF;
+}
+
+.repost__btn::after{
+    content: url('../images/repost.svg');
+    position: relative;
+    width: 24px;
+    height: 24px;
+    top: 7px;
+    left: 5px;
+}
+
+.publication__img{
+    max-width: 100%;
+}
+
+.comments__wrapper{
+    background: #202020;
+    box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.35);
+    margin: 20px 0;
+    padding-left: 350px;
+    padding-right: 350px;
+    padding-bottom: 20px;
+    transition: all .3s;
+    border-radius: 5px;
+}
+
+.comments__wrapper:hover{
+    box-shadow: -10px 15px 25px #415DA9;
+}
+
+.comments__title{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    padding-top: 15px;
+    margin-bottom: 20px;
+}
+
+.comments__form{
+    display: flex;
+    flex-direction: column;
+}
+
+.comments__form-input{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 16px;
+    padding: 10px;
+    border: none;
+    background-color: transparent;
+    border-bottom: 1px solid #fff;
+    color: #fff;
+    margin-bottom: 12px;
+}
+
+.comments__form-btn{
+    width: 91px;
+    height: 30px;
+    padding: 5px;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 16px;
+    cursor: pointer;
+    border: none;
+    transition: all .5s;
+    background: #516395;
+    box-shadow: 0px 4px 15px -7px rgba(48, 55, 201, 0.3);
+    border-radius: 5px;
+    color: #fff;
+    margin-bottom: 30px;
+}
+
+.comments__form-btn:hover{
+    background: #6E7DA8;
+    box-shadow: 0px 4px 40px -7px #000CFC;
+}
+
+.comments__user{
+    font-size: 12px;
+    line-height: 14px;
+    margin-bottom: 25px;
+}
+
+.comments__user-name{
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    margin-bottom: 2px;
+}
+
+.comments__user-date{
+    color: #757575;
+    margin-bottom: 10px;
+}
+
+.comments__user-text{
+    max-width: 550px;
+    margin-bottom: 10px;
+}
+
+.comments__user-btn{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    color: #516395;
+    transition: all .5s;
+    padding: 0;
+}
+
+.comments__user-btn:hover{
+    color: #fff;
+}
