--- a/vkcrb/blog/templates/blog/post/detail.html
+++ b/vkcrb/blog/templates/blog/post/detail.html
@@ -1,14 +1,9 @@
 {% extends "blog/base.html" %}
+ {% load static %}
 {% block title %}{{ post.title }}{% endblock %}
 {% block content %}
 
-<!--<h1>{{ post.title }}</h1>
-<p class="date">Опубликовано {{ post.publish }} автор {{ post.author }}</p>
-{{ post.body|linebreaks }}
-<p>
-    <a href="{% url "blog:post_share" post.id %}">Поделиться этой записью</a>
-</p>
-{% with comments.count as total_comments %}
+<!--{% with comments.count as total_comments %}
 <h2>{{ total_comments }} комментариев{{ total_comment|pluralize }}</h2>
 {% endwith %}
     {% for comment in comments %}
@@ -35,6 +30,7 @@
 
     <section class="publication">
         <div class="container">
+
             <div class="publication__content animate__animated animate__zoomIn">
                 <div class="publication__container-text">
                     <h5 class="publication__title">{{ post.title }}</h5>
@@ -44,11 +40,11 @@
                     </div>
                     <button class="repost__btn"><a href="{% url "blog:post_share" post.id %}">поделиться</a></button>
                     <p class="publication__text">
-                        {{ post.body|truncatewords:30|linebreaks }}
+
                     </p>
                 </div>
 
-                <img class="publication__img" src="{{post.image.url}}" alt="publication__img">
+                <img class="publication__img" src="{{post.image.url}}" alt="publication__img" width="100%">
 
                 <div class="publication__container-text">
                     <p class="publication__text">
@@ -58,36 +54,36 @@
             </div>
         </div>
 
+
         <section class="comments">
             <div class="container">
                 <div class="comments__wrapper">
                     <h5 class="comments__title">Обсуждение</h5>
-                    <form class="comments__form" action="">
-                        <input class="comments__form-input" type="text" placeholder="Текст комментария">
+                    <form class="comments__form" action="." method="post">
+                        {{ comment_form.as_p }}
+                        {% csrf_token %}
                         <button class="comments__form-btn">Отправить</button>
                     </form>
+                    {% for comment in comments %}
+
                     <div class="comments__users">
                         <div class="comments__user">
-                            <div class="comments__user-name">Дмитрий </div>
-                            <div class="comments__user-date">1 неделю назад</div>
+                            <div class="comments__user-name">{{ comment.name }}</div>
+                            <div class="comments__user-date">{{ comment.created }}</div>
                             <p class="comments__user-text">
-                                Et vestibulum, posuere tortor lacinia sit. Sagittis porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id. Diam sit sed volutpat massa. Egestas ornare vel volutpat.
+                               {{ comment.body|linebreaks }}
                             </p>
                             <button class="comments__user-btn">ответить</button>
                         </div>
-                        <div class="comments__user">
-                            <div class="comments__user-name">Максим</div>
-                            <div class="comments__user-date">1 неделю назад</div>
-                            <p class="comments__user-text">
-                                Et vestibulum, posuere tortor lacinia sit. Sagittis porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id. Diam sit sed volutpat massa. Egestas ornare vel volutpat.
-                            </p>
-                            <button class="comments__user-btn">ответить </button>
-                        </div>
                     </div>
+                    {% empty %}
+                    <p>Пока комментариев нет.</p>
+                    {% endfor %}
                 </div>
 
 
             </div>
+        </section>
         </section>
 
 
