--- a/vkcrb/blog/static/css/style.css
+++ b/vkcrb/blog/static/css/style.css
@@ -908,3 +908,77 @@ body{
 .comments__user-btn:hover{
     color: #fff;
 }
+
+.repost__form{
+    background: rgba(81, 99, 149, 0.95);
+    box-shadow: 0px 4px 50px #666DE9;
+    border-radius: 10px;
+    margin-top: 43px;
+    padding: 50px 70px;
+}
+
+.repost__form-title{
+    text-align: left;
+    font-size: 20px;
+    line-height: 23px;
+    font-weight: 300;
+    position: relative;
+    padding-right: 100px;
+    margin-bottom: 33px;
+}
+
+.repost__form-title::after{
+    content: url('../images/repost.svg');
+    position: absolute;
+    right: 0;
+}
+
+.repost__form-input{
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 16px;
+    padding: 15px;
+    color: #A99B9B;
+    margin-bottom: 25px;
+    width: 254px;
+    height: 37px;
+}
+
+.repost__form-textarea{
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    width: 770px;
+    height: 225px;
+    resize: none;
+    padding: 15px;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 16px;
+    color: #A99B9B;
+}
+
+.form__container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.repost__form-btn{
+    width: 255px;
+    height: 36px;
+    cursor: pointer;
+    background-color: #6C84C7;
+    box-shadow: 0px 4px 40px -7px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    border: none;
+    color: #fff;
+    font-size: 12px;
+    line-height: 14px;
+    transition: all .3s;
+}
+
+.repost__form-btn:hover{
+    box-shadow: 0px 4px 40px -7px #1C62CD;
+}
